welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:4: error: type mismatch;
 found   : (Boolean, Boolean)
 required: Boolean
  case (speed, isBirthday) if (speed <65, isBirthday==true) => return 0
                              ^caughtSpeeding:5: error: type mismatch;
 found   : (Boolean, Boolean)
 required: Boolean
  case (speed, isBirthday) if (speed<=85 && speed>65 , isBirthday==true) => return 1
                              ^caughtSpeeding:6: error: type mismatch;
 found   : (Boolean, Boolean)
 required: Boolean
  case (speed, isBirthday) if (speed>86, isBirthday==true) => return 2
                              ^caughtSpeeding:8: error: type mismatch;
 found   : (Boolean, Boolean)
 required: Boolean
  case (speed, isBirthday) if (speed<60 , isBirthday==false) => return 0
                              ^caughtSpeeding:9: error: type mismatch;
 found   : (Boolean, Boolean)
 required: Boolean
  case (speed, isBirthday) if (speed<=80 && speed>60, isBirthday==false)  => return 1
                              ^caughtSpeeding:10: error: type mismatch;
 found   : (Boolean, Boolean)
 required: Boolean
  case (speed, isBirthday) if (speed>81 , isBirthday==false) => return 2
                              ^